--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "dotenv-webpack": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.1",
     "mini-css-extract-plugin": "^1.2.1",
     "terser-webpack-plugin": "^4.2.3",
+    "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
     "webpack": "^4.44.2",
@@ -27,5 +32,37 @@
   },
   "dependencies": {
     "axios": "^0.21.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testMatch": [
+      "**/*.(test|spec).(ts|tsx)"
+    ],
+    "globals": {
+      "ts-jest": {
+        "babelConfig": true,
+        "tsConfig": "jest.tsconfig.json"
+      }
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/mocks.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/mocks.js"
+    }
   }
 }
